objects/RMA_Item__c.object
<CustomObject>
    <description>RMA detail line items that track specific products to be shipped or returned to/from a customer location.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>RMA__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>RMA__r.Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AltProdPreviouslyOrdered__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>this is used to track that product that previously sent on an RMA</inlineHelpText>
        <label>Alternate Product Previously Ordered</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RMA Items (Alternate Product Previously Ordered)</relationshipLabel>
        <relationshipName>AltRMAProd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>RMA Items</relationshipLabel>
        <relationshipName>R00N30000000t2EPEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chassis__c</fullName>
        <defaultValue>0</defaultValue>
        <description>set to zero for Chassis and 1 for non product family items</description>
        <label>Chassis</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Initial Setup: Ship_To_Contact__r.FirstName + &quot; &quot; +  Ship_To_Contact__r.LastName
After change set, get from RMA header if populated, otherwise same.</description>
        <formula>Ship_To_Contact__r.FirstName + &quot; &quot; +  Ship_To_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Delivery_Class__c</fullName>
        <label>Delivery Class</label>
        <picklist>
            <picklistValues>
                <fullName>Next Business Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faulty_P_N__c</fullName>
        <formula>Asset__r.Product2.ProductCode</formula>
        <label>Faulty Part #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSystemReplacement__c</fullName>
        <formula>if( text(Product2__r.Product_Category__c ) = &apos;Appliance&apos;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsSystemReplacement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_of_Asset__c</fullName>
        <formula>Asset__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model of Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navision_Reference__c</fullName>
        <label>Navision Reference #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RMA Items</relationshipLabel>
        <relationshipName>R00N30000000t2CyEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>TEXT(Product2__r.Product_Category__c )</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product2__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Part #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>RMA Items</relationshipLabel>
        <relationshipName>RMALines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receive_Date__c</fullName>
        <label>Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repair_Date__c</fullName>
        <label>Repair Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSLSCACCARRIER__c</fullName>
        <formula>CASE( ShipToCountry__c , 
&apos;USA&apos;, &apos;US:ATLD:FDE:32&apos;, 
&apos;United States&apos;,  &apos;US:ATLD:FDE:32&apos;, 

&apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSLSCACCARRIER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship2AccountName__c</fullName>
        <formula>IF(NOT(ISBLANK( ShipToCompany__c )), ShipToCompany__c , RMA__r.Ship_To_Account_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship2AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship2ContactName__c</fullName>
        <description>Added for the boomi integration on 4/27 after fixing the google google overwriting contact problem. This field needs to be mapped in boomi as the contact name for the RMA sent to choice.</description>
        <formula>if(NOT(ISBLANK( Ship_To_Contact__c)) ,  Ship_To_Contact__r.FirstName +&quot; &quot; + Ship_To_Contact__r.LastName ,  RMA__r.ContactFirstName__c + &quot; &quot; + RMA__r.ContactLastName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship2ContactName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToAddressAdditional__c</fullName>
        <label>Ship To Street Additional</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToAddress__c</fullName>
        <inlineHelpText>The maximum amount of characters allowed is 60.  Please use Ship to Street Additional field to enter additional characters.</inlineHelpText>
        <label>Ship To Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCity__c</fullName>
        <label>Ship To City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCompany__c</fullName>
        <label>Ship To Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCountry__c</fullName>
        <label>Ship To Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Saint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShipToPostalCode__c</fullName>
        <label>Ship To Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToStateOrProvince__c</fullName>
        <label>Ship To State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMA Items</relationshipLabel>
        <relationshipName>R00N500000021gyXEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_address__c</fullName>
        <label>Ship-To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SlotNumber__c</fullName>
        <label>Slot #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Processing_Notes__c</fullName>
        <formula>Asset__r.special_processing_instructions__c</formula>
        <label>Special Processing Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Dispatched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSM Assist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Return - Repair and Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return - Refurbish and Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance - Ship Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_in_Service__c</fullName>
        <formula>( CreatedDate - Asset__r.CreatedDate) /365.242</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years in Service</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>special_processing_flag__c</fullName>
        <formula>IF(Asset__r.special_processing_flag__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Copied from the asset that this asset requires special processing, see the notes on the asset line item</inlineHelpText>
        <label>Special Processing Flag</label>
        <type>Text</type>
    </fields>
    <label>RMA Item</label>
    <nameField>
        <displayFormat>RMA Item - {YYYY}{MM}{DD}-{0}</displayFormat>
        <label>RMA Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Items</pluralLabel>
    <recordTypes>
        <fullName>Eval_Return</fullName>
        <active>true</active>
        <label>Eval Return</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMA_Return</fullName>
        <active>true</active>
        <label>RMA Return</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>